--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>in.wynk</groupId>
-    <artifactId>training</artifactId>
+    <artifactId>java-training</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.target>11</maven.compiler.target>
