--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,11 @@
         <maven.compiler.source>17</maven.compiler.source>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
+        </dependency>
+    </dependencies>
 </project>
